Bug 1720874 - Try to find menupopup background with :backdrop pseudo-class. r=stransky, a=jcristau

This theme only styles menus with menu:backdrop (which always seems to
match for context menus).

Try that before giving up. Also, fall back to the window background if
that would ever fail (which seems better than just rendering
transparent).

Differential Revision: https://phabricator.services.mozilla.com/D120199